# streamdog

./: LICENSE.md  README.md  app-icon.xcf  index.html  package-lock.json  package.json
src/: App.css  App.tsx  GlobalContext.tsx  ResourceContext.tsx  main.tsx  startup.tsx  styles.css  types.d.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.txt  background.xcf  keyboardArm.xcf
src-tauri/skins/: README.txt
src-tauri/skins/bongocat/: background.xcf  keyboardArm.xcf  mouse.xcf  mouseArm.xcf
src-tauri/skins/doge/: background.xcf  mouse.xcf  mouseArm.xcf
src-tauri/skins/harold/: background.xcf  keyboardArm.xcf  mouseArm.xcf
src-tauri/skins/shaco/: background.xcf  keyboardArm.xcf  mouse.xcf  mouseArm.xcf
src-tauri/src/: main.rs
src/Mouse/: Mouse.css  Mouse.tsx
src/assets/: arm.xcf  dog.xcf  mouse.xcf
src/components/: GlobalContext.tsx
src/components/App/: App.css  App.tsx
src/components/DropArea/: Destroyable.tsx  DropArea.css  DropArea.tsx
src/components/Error/: Error.css  Error.tsx
src/components/GlobalContextProvider/: GlobalContext.tsx  GlobalContextProvider.tsx  context.tsx  layout.tsx  settings.tsx  skins.tsx
src/components/Keyboard/: Keyboard.css  Keyboard.tsx  keymap.tsx
src/components/Menu/: Menu.css  Menu.tsx
src/components/Mouse/: Mouse.css  Mouse.tsx
src/data/: context.tsx  skin.tsx
