[package]
name = "streambuddy"
version = "1.0.0"
description = "StreamBuddy"
authors = ["Georgios Piskas"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-start-dragging", "protocol-asset", "fs-read-file", "fs-create-dir", "process-exit", "fs-write-file", "window-set-always-on-top", "path-all", "fs-remove-dir"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
