[package]
name = "streameleon"
version = "1.0.0"
description = "Streameleon"
authors = ["Georgios Piskas"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-focus", "fs-read-dir", "shell-open", "fs-exists", "window-start-dragging", "protocol-asset", "fs-read-file", "process-exit", "fs-write-file", "window-set-always-on-top", "path-all"] }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
